Immediate action gesture recognizer still doesn't work well with IB https://bugs.webkit.org/show_bug.cgi?id=140967 -and corresponding- rdar://problem/19621509

Reviewed by Tim Horton.

We should add (or remove) the gesture recognizer in viewDidMoveToWindow because
initWithFrame it too early and IB might mess with it.
Source/WebKit/mac:

* WebView/WebImmediateActionController.h:
* WebView/WebImmediateActionController.mm:
(-[WebImmediateActionController immediateActionRecognizer]):
* WebView/WebView.mm:
(-[WebView _commonInitializationWithFrameName:groupName:]):
(-[WebView viewDidMoveToWindow]):

Source/WebKit2:

* UIProcess/API/mac/WKView.mm:
(-[WKView viewDidMoveToWindow]):
(-[WKView initWithFrame:processPool:configuration:webView:]):



Canonical link: https://commits.webkit.org/158958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179230 268f45cc-cd09-0410-ab3c-d52691b4dbfc